@@ -75,6 +75,8 @@ NULL
 ##' @param penwt.method estimator for obtaining first-stage estimates in
 ##' logistic models when \code{method = "alasso"}: \code{"lm"} (default) for a
 ##' linear probability model, \code{"glm"} for logistic regression.
+##' @param unpenalized names of model terms to be exempt from the adaptive
+##' penalty (only available when \code{model = "alasso"}).
 ##' @param boot number of bootstrap iterations (0 for no bootstrapping).
 ##' @param control.boot list of arguments to be passed to
 ##' \code{\link{bootPolywog}} when bootstrapping; see \code{\link{control.bp}}.
@@ -115,6 +117,8 @@ NULL
 ##'   \item{\code{penwt.method}}{estimator for penalty weights in adaptive LASSO
 ##' models, \code{"lm"} or \code{"glm"}; is \code{NULL} if \code{method =
 ##' "scad"}.}
+##'   \item{\code{unpenalized}}{columns of the model matrix (not including
+##' intercept) to be exempt from the adaptive penalty.}
 ##'   \item{\code{nfolds}}{number of cross-validation folds.}
 ##'   \item{\code{terms}}{the \code{\link{terms}} object used in fitting.}
 ##'   \item{\code{pivot}}{indices of the non-collinear columns of the full basis
@@ -183,6 +187,7 @@ polywog <- function(formula, data, subset, weights, na.action,
                     family = c("gaussian", "binomial"),
                     method = c("alasso", "scad", "none"),
                     penwt.method = c("lm", "glm"),
+                    unpenalized = character(0),
                     boot = 0, control.boot = control.bp(),
                     .parallel = FALSE,
                     model = TRUE, X = FALSE, y = FALSE,
@@ -261,6 +266,19 @@ polywog <- function(formula, data, subset, weights, na.action,
         penwt.method <- NULL
     }
 
+    ## Check for unpenalized columns
+    if (length(unpenalized) > 0 && method == "scad") {
+        unpenalized <- character(0)
+        warning("Argument 'unpenalized' is unavailable when method = \"scad\"")
+    }
+    nopen <- which(colnames(X) %in% unpenalized)
+    if (length(unpenalized) > length(nopen)) {
+        warning("Some terms in 'unpenalized' do not appear in the model: ",
+                paste(unpenalized[!(unpenalized %in% colnames(X))],
+                      collapse = ", "))
+    }
+    penwt[nopen] <- 0
+
     ## Compute cross-validated model fit
     fitPolywog <- switch(method,
                          alasso = fitALasso,
@@ -295,6 +313,7 @@ polywog <- function(formula, data, subset, weights, na.action,
                 weights = if (nowt) NULL else w,
                 method = method,
                 penwt.method = penwt.method,
+                unpenalized = nopen,
                 nfolds = nfolds,
                 # (5)
                 terms = terms,
@@ -353,7 +372,7 @@ control.bp <- function(reuse.lambda = FALSE, reuse.penwt = FALSE,
 ## Innards of the bootstrap procedure
 ##
 bootFit <- function(X, y, weights, family, lambda, penwt, method, penwt.method,
-                    nfolds, scad.maxit, pb, i)
+                    unpenalized, nfolds, scad.maxit, pb, i)
 {
     ## Calculate penalty weights unless specified
     if (method == "alasso" && is.null(penwt)) {
@@ -363,6 +382,8 @@ bootFit <- function(X, y, weights, family, lambda, penwt, method, penwt.method,
         } else {
             penwt <- penaltyWeightsBinary(X, y, weights)
         }
+
+        penwt[unpenalized] <- 0
     }
 
     ## Fit model on bootstrap data and catch any convergence errors
@@ -476,6 +497,7 @@ bootPolywog <- function(model, nboot = 100, reuse.lambda = FALSE,
     family <- model$family
     method <- model$method
     penwt.method <- model$penwt.method
+    unpenalized <- model$unpenalized
     pivot <- model$pivot
     nobs <- model$nobs
     lambda <- if (reuse.lambda) model$lambda else NULL
@@ -522,6 +544,7 @@ bootPolywog <- function(model, nboot = 100, reuse.lambda = FALSE,
             polywog:::bootFit(X = X[ind, , drop = FALSE], y = y[ind], weights =
                     weights[ind], family = family, lambda = lambda, penwt =
                     penwt, method = method, penwt.method = penwt.method,
+                    unpenalized = unpenalized,
                     nfolds = nfolds, scad.maxit = scad.maxit, pb = pb, i = i)
         }
     } else {
@@ -543,6 +566,7 @@ bootPolywog <- function(model, nboot = 100, reuse.lambda = FALSE,
                 bootFit(X = X[ind, , drop = FALSE], y = y[ind], weights =
                         weights[ind], family = family, lambda = lambda, penwt =
                         penwt, method = method, penwt.method = penwt.method,
+                        unpenalized = unpenalized,
                         nfolds = nfolds, scad.maxit = scad.maxit, pb = pb, i = i)
         }
     }
